...
                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Login" translatesAutoresizingMaskIntoConstraints="NO" id="ujZ-Fg-luI">
                                <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                                <accessibility key="accessibilityConfiguration" identifier="gotoLoginView">
                                    <bool key="isElement" value="YES"/>
                                </accessibility>
...
                                <fontDescription key="fontDescription" name="GurmukhiMN" family="Gurmukhi MN" pointSize="17"/>
                                <color key="tintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                <state key="normal" title="GET STARTED">
                                    <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                    <color key="titleShadowColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                </constraints>
                                <fontDescription key="fontDescription" name="GurmukhiMN" family="Gurmukhi MN" pointSize="18"/>
                                <state key="normal" title="REGISTER">
                                    <color key="titleColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                    <color key="titleShadowColor" red="0.1121854056" green="0.1052894435" blue="0.13640873019999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
        <scene sceneID="n51-H0-IoN">
            <objects>
                <viewController storyboardIdentifier="feed" title="Feed" id="Wgb-bm-Zk1" customClass="Feed" customModule="Pick_Up_Games" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="TxO-S9-Dim">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
...
                    </view>
                    <navigationItem key="navigationItem" title="feed" id="1dh-AO-01a">
                        <barButtonItem key="leftBarButtonItem" title="Profile" id="2p0-cu-0FM">
                            <color key="tintColor" red="0.23775596269999999" green="0.99316922949999997" blue="0.98085817639999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                            <userDefinedRuntimeAttributes>
...
                                <items>
                                    <navigationItem title="Profile" id="49L-Ni-otp" userLabel="Profile">
                                        <barButtonItem key="leftBarButtonItem" title="feed" image="Back icon" id="1gW-Wc-Sjk" userLabel="Back Button"/>
                                        <barButtonItem key="rightBarButtonItem" title="Edit" image="Back icon" width="50" id="IEd-z0-The" userLabel="Modify Profile">
                                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.39187930050000003" colorSpace="custom" customColorSpace="sRGB"/>
                                <fontDescription key="fontDescription" type="system" pointSize="29"/>
                                <state key="normal" title="Done">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
                                </constraints>
                                <fontDescription key="fontDescription" name="GurmukhiMN" family="Gurmukhi MN" pointSize="19"/>
                                <state key="normal" title="Create Event">
                                    <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                </state>
...
                        <viewLayoutGuide key="safeArea" id="tEh-iN-BMD"/>
                    </view>
                    <navigationItem key="navigationItem" title="createEvent" id="P2h-Gv-nOh"/>
                    <connections>
                        <outlet property="EventType" destination="34S-Ts-Sn4" id="C9h-mj-qj8"/>
...
